main_output.txt
  File "main.py", line 3
    def __init__(self, titulo, autor, genero, precio):
    ^
IndentationError: unexpected indent


** Process exited - Return Code: 1 **
Press Enter to exit terminal